fixed cursor pointer at plus button and text-align in navbar

--- a/assets/main-content/main-content.css
+++ b/assets/main-content/main-content.css
@@ -66,6 +66,8 @@
     right: 15px;
     bottom: 15px;
 
+    cursor: pointer;
+
     color: white;
     border: none;
     background-color: transparent;
