--- a/assets/navigation/navigation.css
+++ b/assets/navigation/navigation.css
@@ -101,5 +101,7 @@
         font-size: 0.6rem;
 
         margin: 0;
+
+        vertical-align: baseline;
     }
 }
